--- a/src/App.scss
+++ b/src/App.scss
@@ -1,128 +1,249 @@
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
-
-.App {
+:root {
 	$font-cap: 'Work Sans', sans-serif;
 	$font-reg: Roboto, sans-serif;
 	$text-color: #fff;
 	$pad: 50px;
 	$half-pad: $pad * .5;
 
-	height: 100vh;
-	display: flex;
-	color: $text-color;
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: top;
-
-	transition: background-image .5s ease-out;
-
-	&[bg-name="mist"] {
-		background-image: url("./images/mist.jpg");
+	* {
+		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
 	}
 
-	&[bg-name="thunderstorm"] {
-		background-image: url("./images/thunderstorm.jpg");
-	}
+	.App {
+		height: 100vh;
+		display: flex;
+		color: $text-color;
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: top;
 
-	&[bg-name="rain"] {
-		background-image: url("./images/rain.jpg");
-	}
+		transition: background-image .5s ease-out;
 
-	&[bg-name="shower-rain"] {
-		background-image: url("./images/shower-rain.jpg");
-	}
+		&[bg-name="clear-sky"] {
+			background-image: url("./assets/images/clear-sky.jpg");
+		}
 
-	&[bg-name="scattered-clouds"],
-	&[bg-name="broken-clouds"] {
-		background-image: url("./images/scattered-clouds.jpg");
-	}
+		&[bg-name="mist"] {
+			background-image: url("./assets/images/mist.jpg");
+		}
 
-	&[bg-name="few-clouds"] {
-		background-image: url("./images/few-clouds.jpg");
-	}
+		&[bg-name="thunderstorm"] {
+			background-image: url("./assets/images/thunderstorm.jpg");
+		}
 
-	main {
-		flex-basis: 70%;
-		padding: $half-pad;
-		padding-left: $pad + 10px;
-  		// backdrop-filter: blur(2px);
-		/*min-width: */
+		&[bg-name="rain"] {
+			background-image: url("./assets/images/rain.jpg");
+		}
 
-		header {
-			display: flex;
-			padding-bottom: $pad;
+		&[bg-name="shower-rain"] {
+			background-image: url("./assets/images/shower-rain.jpg");
+		}
 
-			.app-logo {
-				flex-basis: 65%;
+		&[bg-name="scattered-clouds"],
+		&[bg-name="broken-clouds"] {
+			background-image: url("./assets/images/scattered-clouds.jpg");
+		}
+
+		&[bg-name="few-clouds"] {
+			background-image: url("./assets/images/few-clouds.jpg");
+		}
+
+		main {
+			flex-grow: 1;
+			padding: $half-pad;
+			padding-left: $pad + 10px;
+	  		// backdrop-filter: blur(2px);
+			/*min-width: */
+
+			header {
+				display: flex;
+				padding-bottom: $pad;
+
+				.app-logo {
+					flex-basis: 65%;
+				}
+
+				.select {
+					$p: 12px;
+					flex-grow: 1;
+					overflow: hidden;
+					text-shadow: 1px 1px 1px #3b3b3b;
+
+					.selection {
+						display: flex;
+						justify-content: space-between;
+						// white-space: nowrap;
+						padding: $p $p $p $p * 2;
+						padding-top: 0px;
+						cursor: pointer;
+						z-index: 5;
+
+						.text {
+							font-family: $font-cap;
+							font-size: 1rem;
+							font-weight: 500;
+							pointer-events: none;
+						}
+
+						span {
+							$size: 15px;
+							height: $size;
+							width: $size;
+							pointer-events: none;
+
+							svg {
+								fill: $text-color;
+								transition: all ease-in-out .3s;
+							}
+						}
+						// border-bottom: 1px solid $text-color;
+					}
+
+					&:not(.collapsed) .selection span svg {
+						transform: rotateZ(180deg)
+					}
+
+					.options {
+						height: 28vmax;
+						min-height: 330px;
+						overflow: auto;
+						margin: 0 $p;
+						// padding: $p;
+						transform-origin: top left;
+						transition: all ease-in-out .3s;
+
+						.option {
+							padding: $p;
+							font-size: .86em;
+							cursor: pointer;
+							transition: all ease-in-out .2s;
+
+							&:not(.selected):hover {
+								font-weight: 600;
+								padding-left: $pad - 20px;
+							}
+
+							&.selected {
+								border-left: 1px solid $text-color;
+							}
+						}
+
+						&::-webkit-scrollbar {
+							width: 4px;
+						}
+
+						&::-webkit-scrollbar-track {
+							background-color: transparent;
+						}
+
+						&::-webkit-scrollbar-thumb {
+							opacity: .5;
+							background-color: $text-color;
+							transition: opacity .3s ease-in-out;
+						}
+
+						&::-webkit-scrollbar-thumb:hover {
+							opacity: 1;
+						}
+					}
+
+					&.collapsed .options {
+						transform: scaleY(0)
+					}
+
+					// &:not(.collapsed) {
+					// 	padding: $p;
+					// 	box-shadow: 0 0 4px #c4c4c4;
+
+					// 	.selection {
+					// 		backdrop-filter: blur(9px);
+					// 	}
+					// }
+				}
+			}
+
+			.information {
+				display: flex;
+				align-items: center;
+				text-shadow: 1px 1px 2px #000;
+				font-family: $font-cap;
+				// text-outline: #000;
+
+				.temperature {
+					// font-family: $font-cap;
+					font-size: 10vmax;
+
+					.symbol {
+						font-size: 5vmax;
+						vertical-align: super;
+						margin-left: 9px;
+					}
+				}
+
+				.details {
+					margin: 0 $half-pad;
+
+					.city {
+						font-size: 2vmax;
+						font-weight: 500;
+						letter-spacing: 4px;
+					}
+
+					.timestamp {
+						// font-family: $font-reg;
+						display: flex;
+						margin-top: 7px;
+
+						.date {
+							margin-left: 12px;
+						}
+					}
+				}
+
+				.weather {
+					.icon {
+						height: 37px;
+						width: auto;
+					}
+					.type {
+						text-transform: capitalize;
+					}
+				}
+			}
+		}
+
+		aside {
+			$spacing: 15px;
+			$color: rgba(255, 255, 255, .4);
+
+			flex-basis: 30%;
+			height: 100%;
+			padding: $half-pad $pad;
+			overflow-y: auto;
+			// background-color: rgba(10, 10, 10, .3);
+			backdrop-filter: blur(25px);
+
+			.title {
+				font-family: $font-cap;
+				font-weight: 500;
+				text-transform: capitalize;
+				letter-spacing: 1.5px;
+				font-size: 1.1rem;
+				padding-bottom: $spacing;
+				border-bottom: 1px solid $color;
+				// text-shadow: 1px 1px 2px #000;
 			}
 
 			.select {
-				$p: 12px;
-				flex-grow: 1;
-				overflow: hidden;
-				text-shadow: 1px 1px 2px #000;
-
-				.selection {
-					display: flex;
-					justify-content: space-between;
-					// white-space: nowrap;
-					padding: $p $p * 2;
-					padding-top: 0px;
-					cursor: pointer;
-					z-index: 5;
-
-					.text {
-						font-family: $font-cap;
-						font-size: 1rem;
-						font-weight: 500;
-						pointer-events: none;
-					}
-
-					span {
-						$size: 15px;
-						height: $size;
-						width: $size;
-						pointer-events: none;
-
-						svg {
-							fill: $text-color;
-							transition: all ease-in-out .3s;
-						}
-					}
-					// border-bottom: 1px solid $text-color;
-				}
-
-				&:not(.collapsed) .selection span svg {
-					transform: rotateZ(180deg)
-				}
+				margin-bottom: $pad;
 
 				.options {
-					max-height: 55vh;
-					overflow: auto;
-					margin: 0 $p;
-					// padding: $p;
-					transform-origin: top left;
-					transition: all ease-in-out .3s;
-
-					.option {
-						padding: $p;
-						font-size: .86em;
-						cursor: pointer;
-						transition: all ease-in-out .2s;
-
-						&:not(.selected):hover {
-							font-weight: 600;
-							padding-left: $pad - 20px;
-						}
-
-						&.selected {
-							border-left: 1px solid $text-color;
-						}
-					}
+					max-height: 270px;
+					overflow-y: auto;
+					margin: $spacing 0;
+					color: $color;
 
 					&::-webkit-scrollbar {
 						width: 4px;
@@ -141,182 +262,142 @@
 					&::-webkit-scrollbar-thumb:hover {
 						opacity: 1;
 					}
-				}
 
-				&.collapsed .options {
-					transform: scaleY(0)
-				}
+					.option {
+						padding: 9px 0;
+						font-size: .95rem;
+						transition: all ease-in-out .15s;
 
-				// &:not(.collapsed) {
-				// 	padding: $p;
-				// 	box-shadow: 0 0 4px #c4c4c4;
+						&:not(.selected):hover {
+							color: $text-color;
+							padding-left: 12px;
+						}
 
-				// 	.selection {
-				// 		backdrop-filter: blur(9px);
-				// 	}
-				// }
-			}
-		}
-
-		.information {
-			display: flex;
-			align-items: center;
-			text-shadow: 1px 1px 2px #000;
-			font-family: $font-cap;
-			// text-outline: #000;
-
-			.temperature {
-				// font-family: $font-cap;
-				font-size: 9rem;
-
-				.symbol {
-					font-size: 5rem;
-					vertical-align: super;
-					margin-left: 9px;
+						&.selected {
+							color: $text-color;
+						}
+					}
 				}
 			}
 
-			.details {
-				margin: 0 $half-pad;
-
-				.city {
-					font-size: 2rem;
-					font-weight: 500;
-					letter-spacing: 4px;
+			.weather-details {
+				> div {
+					margin: $spacing 0;
 				}
 
-				.timestamp {
-					// font-family: $font-reg;
+				.info {
 					display: flex;
-					margin-top: 7px;
-
-					.date {
-						margin-left: 12px;
-					}
-				}
-			}
-
-			.weather {
-				.type {
-					text-transform: capitalize;
-				}
-			}
-		}
-	}
-
-	aside {
-		$spacing: 15px;
-		$color: rgba(255, 255, 255, .4);
-
-		flex-grow: 1;
-		height: 100%;
-		padding: $half-pad $pad;
-		overflow-y: auto;
-		backdrop-filter: blur(25px);
-
-		.title {
-			font-family: $font-cap;
-			font-weight: 500;
-			text-transform: capitalize;
-			letter-spacing: 1.5px;
-			font-size: 1.1rem;
-			padding-bottom: $spacing;
-			border-bottom: 1px solid $color;
-			text-shadow: 1px 1px 2px #000;
-		}
-
-		.select {
-			margin-bottom: $pad;
-
-			.options {
-				max-height: 270px;
-				overflow-y: auto;
-				margin: $spacing 0;
-				color: $color;
-
-				&::-webkit-scrollbar {
-					width: 4px;
-				}
-
-				&::-webkit-scrollbar-track {
-					background-color: transparent;
-				}
-
-				&::-webkit-scrollbar-thumb {
-					opacity: .5;
-					background-color: $text-color;
-					transition: opacity .3s ease-in-out;
-				}
-
-				&::-webkit-scrollbar-thumb:hover {
-					opacity: 1;
-				}
-
-				.option {
+					align-items: center;
+					justify-content: space-between;
 					padding: 9px 0;
+
+					.name {
+						// font-weight: 500;
+						text-transform: capitalize;
+					}
+				}
+			}
+		}
+
+		.option {
+			cursor: pointer;
+			font-family: $font-reg;
+			font-weight: 300;
+
+			&.selected {
+				font-weight: 500;
+			}
+
+			&.is-updating {
+				opacity: 0;
+				transform: translateX(-100%);
+			}
+		}
+	}
+
+	@media screen and (max-width: 425px) {
+
+	}
+
+	@media screen and (max-width: 768px) {
+		.App {
+			main {
+				padding: $half-pad;
+
+				header {
+					padding-bottom: $half-pad;
+
+					.app-logo {
+						flex-grow: 1;
+						font-size: .8rem;
+					}
+					.select {
+						flex-basis: 80%;
+						max-width: 250px;
+
+						.selection {
+							padding-left: 12px;
+
+							.text {
+								font-size: .9rem;
+							}
+						}
+
+						.options {
+							margin: 0px;
+
+							.option {
+								font-size: .8em;
+							}
+						}
+					}
+				}
+
+				.information {
+					flex-direction: column;
+					align-items: unset;
+
+					.temperature {
+						font-size: 5rem;
+
+						.symbol {
+							font-size: 2.5rem
+						}
+					}
+
+					.details {
+						margin: 0;
+						margin-bottom: $half-pad - 10px;
+
+						.city {
+							font-size: 1.5rem;
+						}
+					}
+
+					.weather {
+						display: flex;
+						align-items: center;
+
+						.icon {
+							margin-right: 15px;
+						}
+					}
+				}
+
+			}
+
+			aside {
+				position: fixed;
+				top: 0;
+				left: -100%;
+				padding: $half-pad + 10px;
+				width: 85%;
+				max-width: 380px;
+
+				.title {
 					font-size: .95rem;
-
-					// animation-name: slideIn, fadeIn;
-					// animation-duration: .3s;
-					// animation-timing-function: ease-out;
-					// animation-delay: .05s;
-					// animation-fill-mode: forwards;
-
-					transition: all ease-in-out .15s;
-
-					&:not(.selected):hover {
-						color: $text-color;
-						padding-left: 12px;
-					}
-
-					&.selected {
-						color: $text-color;
-						// margin-right: $half-pad;
-						// border-right: 1px solid $text-color;
-					}
-				}
-			}
-		}
-
-		.weather-details {
-			> div {
-				margin: $spacing 0;
-			}
-
-			.info {
-				display: flex;
-				align-items: center;
-				justify-content: space-between;
-				padding: 9px 0;
-
-				.name {
-					// font-weight: 500;
-					text-transform: capitalize;
 				}
 			}
 		}
 	}
-
-	.option {
-		cursor: pointer;
-		font-family: $font-reg;
-		font-weight: 300;
-
-		&.selected {
-			font-weight: 500;
-		}
-
-		&.is-updating {
-			opacity: 0;
-			transform: translateX(-100%);
-		}
-	}
-}
-
-@keyframes slideIn {
-	to { transform: translate(0) }
-}
-
-@keyframes fadeIn {
-	to { opacity: 1 }
 }
